--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ailibs/feather-react-ts": "^2.0.4",
+    "@icons-pack/react-simple-icons": "^4.6.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "simple-icons": "^6.12.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
